Fix sidebar overlap by restoring page grid

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -49,12 +49,12 @@
 }
 
 .page__content {
-  max-width: 800px;
+  max-width: 1600px;
   margin: 0 auto;
-  padding: 1.5em 2em;
+  padding: 1.1em 1.25em;
 
   @include breakpoint(max-width $medium) {
-    padding: 1em 1.5em;
+    padding: 1em 1.25em;
   }
 
   @include breakpoint(max-width $small) {
