--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -113,8 +113,8 @@ $x-large                    : 1800px;
 $small                      : 600px !default;
 $medium                     : 768px !default;
 $medium-wide                : 900px !default;
-$large                      : 925px !default;
-$x-large                    : 1280px !default;
+$large                      : 1400px !default;
+$x-large                    : 2000px !default;
 
 /*
    Grid
@@ -131,7 +131,7 @@ $susy: (
   math: fluid,
   output: float,
   gutter-position: after,
-  container: $large,
+  container: $x-large,
   global-box-sizing: border-box,
   // debug: (
   //   image: show,
